[metadata]
name          = GrumpyWidgets
version       = file: VERSION.txt
description   = A grumpy widget library

author        = Felix Schwarz
author_email  = felix.schwarz@oss.schwarz.eu
url           = https://github.com/FelixSchwarz/grumpywidgets
license       = MIT
license_file  = LICENSE.txt


[options]
python_requires = >= 2.7, < 3
packages = find:
namespace_packages =
    grumpyforms
    grumpyforms.ext
    grumpywidgets
    grumpywidgets.ext
zip_safe = false
include_package_data = true

install_requires =
    jinja2
    # >= 0.6.90: pycerberus.lib.form_data
    pycerberus >= 0.6.90
    PythonicTestcase
    setuptools
    six

[options.extras_require]
testing =
    Genshi
    PythonicTestCase


[bdist_wheel]
universal = 1

