[metadata]
name          = GrumpyWidgets
version       = file: VERSION.txt
description   = A grumpy widget library

author        = Felix Schwarz
author_email  = felix.schwarz@oss.schwarz.eu
url           = https://github.com/FelixSchwarz/grumpywidgets
license       = MIT
license_file  = LICENSE.txt


[options]
python_requires = >= 2.7
packages =
    grumpywidgets
    grumpywidgets.templates
    grumpyforms
    grumpyforms.fields
    grumpyforms.genshi_
    grumpyforms.templates

namespace_packages =
    grumpyforms
    grumpyforms.ext
    grumpywidgets
    grumpywidgets.ext
zip_safe = false
include_package_data = false

install_requires =
    jinja2
    # >= 0.6.90: pycerberus.lib.form_data
    pycerberus >= 0.6.90
    setuptools
    six

[options.extras_require]
testing =
    Genshi
    # >= 0.3.1: ignore order of css class names in "class" attribute
    htmlcompare >= 0.3.1
    PythonicTestCase


[options.package_data]
* =
    *.genshi
    *.jinja2


[bdist_wheel]
universal = 1

